[project]
name = "pynomial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
markers = [
    "wald: marks tests as wald confidence interval tests",
    "cloglog: marks tests as cloglog confidence interval tests",
    "agresti_coull: marks tests as agresti-coull confidence interval tests",
    "bayesian_beta: marks tests as bayesian beta confidence interval tests",
    "validation: marks tests as validation tests",
]
