[project]
name = "pynomial"
version = "0.1.0"
description = "Python library for binomial proportion confidence intervals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pynomial*"]
exclude = ["source*", "tests*", "docs*", "build*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "scipy-stubs>=1.16.1.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-book-theme>=1.1.4",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2", 
    "sphinx-autodoc-typehints>=3.2.0",
]

[tool.pytest.ini_options]
markers = [
    "wald: marks tests as wald confidence interval tests",
    "cloglog: marks tests as cloglog confidence interval tests",
    "agresti_coull: marks tests as agresti-coull confidence interval tests",
    "bayesian_beta: marks tests as bayesian beta confidence interval tests",
    "clopper_pearson: marks tests as clopper-pearson (exact) confidence interval tests",
    "logit: marks tests as logit transformation confidence interval tests",
    "wilson: marks tests as wilson score confidence interval tests",
    "arcsine: marks tests as arcsine tests",
    "validation: marks tests as validation tests",
]
