[metadata]
name = pynomial
version = 0.0.1
description = A python package for binomial confidence intervals
author = Demetri Pananos
liscence = MIT
liscence_file = LISCENCE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    pynomial
install_requires =
    numpy>=1.20.0
    scipy>=1.5.0
    pandas>=1.1.0
    
[options.extras_require]
testing = 
    pytest>=6.2.0
    pytest-cov>=3.0